remove renderly: defunct side project, never part of Auxilo
